--- a/index.html
+++ b/index.html
@@ -17,5 +17,17 @@
         <p>CPU score:<br><span id="cpu-score">0</span></p>
     </div>
     <script src="js/script.js"></script>
+    <audio id="audio-start">
+        <source src="assets/sounds/game-start.mp3" type="audio/mp3">
+        Seu navegador não possui suporte ao elemento audio
+    </audio>
+    <audio id="audio-success">
+        <source src="assets/sounds/success.mp3"  type="audio/mp3">
+        Seu navegador não possui suporte ao elemento audio
+    </audio>
+    <audio id="audio-fail">
+        <source src="assets/sounds/fail.mp3" type="audio/mp3">
+        Seu navegador não possui suporte ao elemento audio
+    </audio>
 </body>
 </html>
