--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <button id="reset">Reset</button>
     <p>Level:<br><span id="number-level">0</span></p>
     <div id="gameContainer">
-        <p>Player score:<br><span id="player-score">0</span></p>
+        <p id="player-label">Player score:<br><span id="player-score">0</span></p>
         <canvas id="pongCanvas" width="800" height="400"></canvas>
-        <p>CPU score:<br><span id="cpu-score">0</span></p>
+        <p id="cpu-label">CPU score:<br><span id="cpu-score">0</span></p>
     </div>
     <script src="js/script.js"></script>
     <audio id="audio-start">
